// Diagrama entidad-relación — Sistema de Inventario Multi-Sucursal
// Refleja database/init/01-schema.sql y 02-indexes.sql.
// Módulos obligatorios cubiertos: 3.1 Inventario, 3.2 Compras, 3.3 Ventas,
// 3.4 Transferencias, 3.5 Logística. Funcionalidad adicional (sección 4):
// alertas inteligentes de stock (stock_alerts). El módulo de reportes
// exportables (también elegido) no requiere tablas nuevas.
//
// Orden jerárquico: tablas maestras primero, luego cabeceras, luego detalle.

Project inventory_system {
  database_type: 'PostgreSQL'
  Note: 'Sistema de gestión de inventario multi-sucursal — OptiPlant Consultores'
}

Enum movement_type {
  purchase_in
  return_in
  adjustment_in
  transfer_in
  sale_out
  shrinkage_out
  adjustment_out
  transfer_out
}

Enum reference_type {
  purchase_order
  sale
  transfer
  manual_adjustment
}

Enum purchase_order_status {
  draft
  sent
  confirmed
  partially_received
  fully_received
  cancelled
}

Enum sale_status {
  confirmed
  voided
}

Enum transfer_status {
  requested
  preparing
  in_transit
  fully_received
  partially_received
  cancelled
}

Enum priority_level {
  low
  medium
  high
}

Enum alert_type {
  low_stock
  high_stock
}

Enum alert_status {
  pending
  resolved
}

// =======================================================================
// TABLAS MAESTRAS
// =======================================================================

Table branches {
  id          bigint    [pk, increment]
  code        varchar   [not null, unique]
  name        varchar   [not null]
  address     text
  city        varchar
  phone       varchar
  active      boolean   [not null, default: true]
  created_at  timestamptz [not null, default: `now()`]

  Note: 'Tabla maestra'
}

Table roles {
  id          bigint  [pk, increment]
  code        varchar [not null, unique]
  name        varchar [not null]
  description text

  Note: 'Tabla maestra — catálogo cerrado (sección 6.2): general_admin, branch_manager, inventory_operator'
}

Table users {
  id             bigint    [pk, increment]
  branch_id      bigint    [ref: > branches.id, note: 'Nulo solo para general_admin']
  role_id        bigint    [not null, ref: > roles.id]
  name           varchar   [not null]
  email          varchar   [not null, unique]
  password_hash  text      [not null]
  active         boolean   [not null, default: true]
  created_at     timestamptz [not null, default: `now()`]

  indexes {
    branch_id
    role_id
  }

  Note: 'Tabla maestra'
}

Table product_categories {
  id          bigint  [pk, increment]
  name        varchar [not null, unique]
  description text

  Note: 'Tabla maestra'
}

Table units_of_measure {
  id           bigint  [pk, increment]
  name         varchar [not null, unique]
  abbreviation varchar [not null, unique]

  Note: 'Tabla maestra'
}

Table products {
  id               bigint  [pk, increment]
  sku              varchar [not null, unique]
  name             varchar [not null]
  description      text
  category_id      bigint  [ref: > product_categories.id]
  base_unit_id     bigint  [not null, ref: > units_of_measure.id]
  reference_price  numeric
  active           boolean [not null, default: true]
  created_at       timestamptz [not null, default: `now()`]

  indexes {
    category_id
    base_unit_id
  }

  Note: 'Tabla maestra'
}

Table suppliers {
  id           bigint  [pk, increment]
  name         varchar [not null]
  tax_id       varchar [unique]
  contact_name varchar
  phone        varchar
  email        varchar
  address      text
  active       boolean [not null, default: true]
  created_at   timestamptz [not null, default: `now()`]

  Note: 'Tabla maestra'
}

Table price_lists {
  id          bigint  [pk, increment]
  name        varchar [not null]
  description text
  active      boolean [not null, default: true]
  start_date  date
  end_date    date

  Note: 'Tabla maestra; CHECK end_date >= start_date cuando ambas fechas están definidas'
}

Table inventory {
  id                     bigint  [pk, increment]
  branch_id              bigint  [not null, ref: > branches.id]
  product_id             bigint  [not null, ref: > products.id]
  current_quantity       numeric [not null, default: 0]
  minimum_stock          numeric [not null, default: 0]
  maximum_stock          numeric [note: 'Umbral superior configurable (sección 4: alertas inteligentes); nulo = sin límite superior']
  weighted_average_cost  numeric [not null, default: 0]
  updated_at             timestamptz [not null, default: `now()`]

  indexes {
    (branch_id, product_id) [unique]
    product_id
    branch_id [note: 'Parcial: WHERE current_quantity <= minimum_stock — detección de stock bajo (dashboard 3.6)']
  }

  Note: 'Tabla maestra (estado actual, no histórico); costo promedio ponderado recalculado por el backend en cada ingreso con costo'
}

// =======================================================================
// TABLAS DE CABECERA
// =======================================================================

Table purchase_orders {
  id                 bigint                 [pk, increment]
  order_number       varchar                [not null, unique]
  supplier_id        bigint                 [not null, ref: > suppliers.id]
  branch_id          bigint                 [not null, ref: > branches.id]
  status             purchase_order_status  [not null, default: 'draft']
  order_date         timestamptz            [not null, default: `now()`]
  payment_term_days  integer
  subtotal           numeric                [not null, default: 0]
  total_discount     numeric                [not null, default: 0]
  total              numeric                [not null, default: 0]
  created_by         bigint                 [not null, ref: > users.id]
  created_at         timestamptz            [not null, default: `now()`]

  indexes {
    supplier_id
    branch_id
    status
  }

  Note: 'Tabla de cabecera'
}

Table purchase_receipts {
  id                 bigint      [pk, increment]
  purchase_order_id  bigint      [not null, ref: > purchase_orders.id]
  receipt_date       timestamptz [not null, default: `now()`]
  received_by        bigint      [not null, ref: > users.id]
  is_complete        boolean     [not null, default: false]
  notes              text

  indexes {
    purchase_order_id
  }

  Note: 'Tabla de cabecera'
}

Table sales {
  id              bigint      [pk, increment]
  sale_number     varchar     [not null, unique]
  branch_id       bigint      [not null, ref: > branches.id]
  price_list_id   bigint      [ref: > price_lists.id]
  seller_id       bigint      [not null, ref: > users.id]
  customer_name   varchar
  sale_date       timestamptz [not null, default: `now()`]
  subtotal        numeric     [not null, default: 0]
  total_discount  numeric     [not null, default: 0]
  total           numeric     [not null, default: 0]
  status          sale_status [not null, default: 'confirmed']
  created_at      timestamptz [not null, default: `now()`]

  indexes {
    (branch_id, sale_date)
    seller_id
    status
  }

  Note: 'Tabla de cabecera'
}

Table transfers {
  id                       bigint            [pk, increment]
  transfer_number          varchar           [not null, unique]
  origin_branch_id         bigint            [not null, ref: > branches.id]
  destination_branch_id    bigint            [not null, ref: > branches.id]
  requested_by             bigint            [not null, ref: > users.id]
  status                   transfer_status   [not null, default: 'requested']
  urgency                  priority_level    [not null, default: 'medium']
  route_priority           priority_level
  carrier                  varchar
  shipping_cost            numeric
  request_date             timestamptz       [not null, default: `now()`]
  estimated_ship_date      timestamptz
  actual_ship_date         timestamptz
  estimated_arrival_date   timestamptz
  actual_arrival_date      timestamptz
  created_at               timestamptz       [not null, default: `now()`]

  indexes {
    origin_branch_id
    destination_branch_id
    status
    request_date
  }

  Note: 'Tabla de cabecera; flujo de 5 pasos: solicitud → preparación → envío → recepción completa/parcial (sección 3.4). CHECK origin_branch_id <> destination_branch_id'
}

// =======================================================================
// TABLAS DE DETALLE
// =======================================================================

Table password_reset_tokens {
  id          bigint      [pk, increment]
  user_id     bigint      [not null, ref: > users.id]
  token_hash  text        [not null, unique]
  expires_at  timestamptz [not null]
  used_at     timestamptz
  created_at  timestamptz [not null, default: `now()`]

  indexes {
    user_id
  }

  Note: 'Detalle — token de un solo uso para recuperación de contraseña por email'
}

Table product_units {
  id                 bigint  [pk, increment]
  product_id         bigint  [not null, ref: > products.id]
  unit_id            bigint  [not null, ref: > units_of_measure.id]
  conversion_factor  numeric [not null, note: 'Relativo a la unidad base del producto']
  is_purchase_unit   boolean [not null, default: false]
  is_sale_unit       boolean [not null, default: false]

  indexes {
    (product_id, unit_id) [unique]
    product_id
  }

  Note: 'Tabla de detalle de products'
}

Table price_list_items {
  id             bigint  [pk, increment]
  price_list_id  bigint  [not null, ref: > price_lists.id]
  product_id     bigint  [not null, ref: > products.id]
  price          numeric [not null]

  indexes {
    (price_list_id, product_id) [unique]
    product_id
  }

  Note: 'Tabla de detalle de price_lists'
}

Table stock_alerts {
  id                    bigint        [pk, increment]
  branch_id             bigint        [not null, ref: > branches.id]
  product_id            bigint        [not null, ref: > products.id]
  alert_type            alert_type    [not null]
  quantity_at_trigger   numeric       [not null]
  threshold_value       numeric       [not null]
  status                alert_status  [not null, default: 'pending']
  triggered_at          timestamptz   [not null, default: `now()`]
  resolved_by           bigint        [ref: > users.id]
  resolved_at           timestamptz
  notified_at           timestamptz

  indexes {
    (branch_id, product_id, alert_type) [unique, note: 'Parcial: solo WHERE status = pending — evita alertas abiertas duplicadas']
    (branch_id, status)
    product_id
  }

  Note: 'Tabla de detalle de inventory — funcionalidad adicional (sección 4): alertas inteligentes de stock. CHECK: resolved_by/resolved_at obligatorios cuando status = resolved'
}

Table inventory_movements {
  id                    bigint         [pk, increment]
  branch_id             bigint         [not null, ref: > branches.id]
  product_id            bigint         [not null, ref: > products.id]
  movement_type         movement_type  [not null]
  quantity              numeric        [not null]
  unit_cost             numeric
  reason                text           [not null]
  responsible_user_id   bigint         [not null, ref: > users.id]
  reference_type        reference_type
  reference_id          bigint         [note: 'Referencia polimórfica — sin FK física, la tabla varía según reference_type']
  movement_date         timestamptz    [not null, default: `now()`]
  created_at            timestamptz    [not null, default: `now()`]

  indexes {
    (branch_id, product_id)
    movement_date
    responsible_user_id
    (reference_type, reference_id)
  }

  Note: 'Tabla de detalle (bitácora); trazabilidad obligatoria: fecha, responsable, motivo y cantidad de cada ingreso/retiro'
}

Table purchase_order_items {
  id                  bigint  [pk, increment]
  purchase_order_id   bigint  [not null, ref: > purchase_orders.id]
  product_id          bigint  [not null, ref: > products.id]
  quantity            numeric [not null]
  unit_price          numeric [not null]
  discount_pct        numeric [not null, default: 0]
  subtotal            numeric [note: 'Columna generada: quantity * unit_price * (1 - discount_pct/100)']

  indexes {
    purchase_order_id
    product_id
  }

  Note: 'Tabla de detalle de purchase_orders'
}

Table purchase_receipt_items {
  id                       bigint  [pk, increment]
  receipt_id               bigint  [not null, ref: > purchase_receipts.id]
  purchase_order_item_id   bigint  [not null, ref: > purchase_order_items.id]
  received_quantity        numeric [not null]

  indexes {
    receipt_id
    purchase_order_item_id
  }

  Note: 'Tabla de detalle de purchase_receipts'
}

Table sale_items {
  id             bigint  [pk, increment]
  sale_id        bigint  [not null, ref: > sales.id]
  product_id     bigint  [not null, ref: > products.id]
  quantity       numeric [not null]
  unit_price     numeric [not null]
  discount_pct   numeric [not null, default: 0]
  subtotal       numeric [note: 'Columna generada: quantity * unit_price * (1 - discount_pct/100)']

  indexes {
    sale_id
    product_id
  }

  Note: 'Tabla de detalle de sales'
}

Table transfer_items {
  id                    bigint  [pk, increment]
  transfer_id           bigint  [not null, ref: > transfers.id]
  product_id            bigint  [not null, ref: > products.id]
  requested_quantity    numeric [not null]
  shipped_quantity      numeric [not null, default: 0]
  received_quantity     numeric [not null, default: 0]
  difference            numeric [note: 'Columna generada: shipped_quantity - received_quantity (faltante si > 0)']

  indexes {
    transfer_id
    product_id
  }

  Note: 'Tabla de detalle de transfers'
}

Table transfer_events {
  id             bigint          [pk, increment]
  transfer_id    bigint          [not null, ref: > transfers.id]
  status         transfer_status [not null]
  event_date     timestamptz     [not null, default: `now()`]
  notes          text
  recorded_by    bigint          [not null, ref: > users.id]

  indexes {
    transfer_id
    event_date
  }

  Note: 'Tabla de detalle de transfers; historial de estados — soporta seguimiento de tiempos estimados vs. reales (sección 3.5)'
}
